src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;700&display=swap');
$Dosis:'Dosis';

body{
    margin: 0;
    padding: 0;
    box-sizing: 0;
    font-family: $Dosis;
    color: #fff;
    font-size: 16px;
    overflow-x: hidden;
}

::-webkit-scrollbar {
    height: 5px;
    width: 5px;
    background: rgb(204, 0, 255);
    -webkit-border-radius: 1ex;
  }
  
  ::-webkit-scrollbar-thumb {
    background: rgb(255, 255, 255);
    -webkit-border-radius: 3ex;
  }
  
  ::-webkit-scrollbar-corner {
    background: #fff3;
  }
  
  .titleproject{
    margin-top: -125px;
  }


@import 'styles/BgAnimated';
@import 'styles/Layout';
@import 'styles/TextSpan';
@import 'styles/WelcomeTitle';
@import 'styles/MyStacks';
@import 'styles/SomeProjects';
@import 'styles/AboutMe';
@import 'styles/ContactMe';
@import 'styles/Titles';

